manifests/codingrange/blog-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: codingrange
  name: blog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog
  template:
    metadata:
      labels:
        app: blog
    spec:
      containers:
        - name: blog
          image: localhost:32000/codingrange-blog
          ports:
            - containerPort: 80
              protocol: TCP
