manifests/codingrange/blog-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: codingrange
  name: blog
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: blog
  type: ClusterIP
