manifests/codingrange/blog-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: codingrange
  name: blog
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - codingrange.com
    secretName: codingrange.com
  rules:
  - host: codingrange.com
    http:
      paths:
      - path: /
        backend:
          serviceName: blog
          servicePort: 80
